--- a/srcs/config/TODO.txt
+++ b/srcs/config/TODO.txt
@@ -2,3 +2,14 @@ Use smart pointer to set server and location instead of copy =;
 
 // implement root in ServeConf class
 // matching path = root + path + uri
+
+implement member of Location class 
+	//redirections 
+		bool		has_redirection;
+		std::string	redir_code;
+		std::string	redir_url;
+
+		//upload
+		bool		upload_enable;
+		std::string upload_path;
+		size_t		client_max_body_size;
